Project

General

Profile

Actions

Bug #37594

closed

mds: mds state change race

Added by Zheng Yan over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In multi-mds cluster, recovering mds may receive mdsmap that changes
its state after other mds. Furthermore, the recovering mds may receive
messages tiggered by its state change from other mds before it receive
corresponding mdsmap.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #37759: mimic: mds: mds state change race ResolvedZheng YanActions
Copied to CephFS - Backport #37760: luminous: mds: mds state change race ResolvedZheng YanActions
Actions #1

Updated by Patrick Donnelly over 5 years ago

  • Project changed from Ceph to CephFS
  • Assignee set to Zheng Yan
  • Priority changed from Normal to High
  • Target version set to v14.0.0
  • Start date deleted (12/11/2018)
  • Source set to Development
  • Backport set to mimic,luminous
  • Component(FS) MDS added
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Description updated (diff)
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 5 years ago

Actions #5

Updated by Nathan Cutler over 5 years ago

Actions #6

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF